# currency-converter-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml
currency-conversion/: Cargo.toml  README.md
currency-conversion/src/: common.rs  convert.rs  lib.rs  storage.rs  update.rs
currency-conversion/src/common/: conversion_rate.rs  supported_symbols.rs
currency-conversion/src/convert/: convert_currency.rs
currency-conversion/src/list/: list_data.rs
currency-conversion/src/storage/: common.rs  tsv.rs
currency-conversion/src/update/: update_converison_rates.rs  update_symbols.rs
src/: cli.rs  commands.rs  config.rs  lib.rs  main.rs
src/commands/: common.rs  config.rs  convert.rs  info.rs  list.rs  update.rs
src/commands/common/: conversion_rate.rs  supported_symbols.rs
src/commands/convert/: convert_currency.rs
src/commands/info/: common.rs  info_config.rs  info_conversion_rates.rs  info_symbols.rs
src/commands/list/: list_data.rs
src/commands/update/: common.rs  update_converison_rates.rs  update_symbols.rs
tests/: cli.rs  cli_convert.rs  cli_info.rs  cli_list_symbols.rs  cli_update.rs  test-config.toml
