[package]
name = "currency-converter-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
confy = "0.6.1"
exitcode = "1.1.2"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
rust_decimal = "1.35.0"
serde = { version = "1.0.202", features = ["derive"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
currency-conversion = { path = "./currency-conversion/" }

[dev-dependencies]
assert_cmd = "2.0.14"
httpmock = "0.7.0"
predicates = "3.1.0"
rust_decimal_macros = "1.34.2"
serde_json = "1.0.117"
csv = "1.3.0"

[workspace]
members = ["currency-conversion"]
