[package]
name = "currency-conversion-cli"
version = "0.1.0"
edition = "2021"
authors = ["Cookiegigi <Cookiegigi@pm.me>"]
license = "MIT OR Apache-2.0"
description = "currency-conversion-cli is a simple CLI tool to convert currency offline. It uses conversion rates store in a local file."
readme = "README.md"
homepage = "https://github.com/CookieGigi/currency-conversion-cli"
repository = "https://github.com/CookieGigi/currency-conversion-cli"
keywords = ["cli", "currency", "conversion"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
currency-conversion = { path = "./currency-conversion/", version = "0.1.0" }
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
confy = "0.6.1"
exitcode = "1.1.2"
rust_decimal = "1.35.0"
serde = { version = "1.0.202", features = ["derive"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
home = "0.5.9"
openssl = { version = "0.10.64", features = ["vendored"] }

[dev-dependencies]
assert_cmd = "2.0.14"
httpmock = "0.7.0"
predicates = "3.1.0"
rust_decimal_macros = "1.34.2"
serde_json = "1.0.117"
csv = "1.3.0"

[workspace]
members = ["currency-conversion"]
