[package]
name = "currency-conversion"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
rust_decimal = "1.35.0"
serde = { version = "1.0.200", features = ["derive"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
anyhow = "1.0.83"

[dev-dependencies]
httpmock = "0.7.0"
predicates = "3.1.0"
rust_decimal_macros = "1.34.2"
serde_json = "1.0.116"
