[package]
name = "currency-conversion"
version = "0.1.0"
edition = "2021"
authors = ["Cookiegigi <Cookiegigi@pm.me>"]
license = "MIT OR Apache-2.0"
description = "currency-conversion is a simple lib (used by currency-conversion-cli) to convert currency offline. It uses conversion rates store in a local file."
homepage = "https://github.com/CookieGigi/currency-conversion-cli"
repository = "https://github.com/CookieGigi/currency-conversion-cli"
keywords = ["cli", "currency", "conversion"]
categories = ["command-line-utilities"]

[dependencies]
csv = "1.3.0"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
rust_decimal = "1.35.0"
serde = { version = "1.0.203", features = ["derive"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
anyhow = "1.0.86"

[dev-dependencies]
httpmock = "0.7.0"
predicates = "3.1.0"
rust_decimal_macros = "1.34.2"
serde_json = "1.0.119"
